frontend: fix for main-container z-index

--- a/srv/resources/assets/style/local.less
+++ b/srv/resources/assets/style/local.less
@@ -13,6 +13,7 @@
   height: 100vh;
   padding-top: 40px;
   position: relative;
+  z-index: 1;
 }
 
 #top-level-modals {
